--- a/src/main/resources/templates/index1.html
+++ b/src/main/resources/templates/index1.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <img th:src="${filePath}">
-<form action="upload" method="post" enctype="multipart/form-data">
+<form action="/modify/index" method="post" enctype="multipart/form-data">
     <input type="file" name="pic">
     <input type="submit">
 </form>
